2019-1/231/users/4246/executions/1651_1053.log
== SUBMITION (2019-04-04 23:16:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- EXECUTION TIME:
0.133729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/1053/main.py", line 7, in <module>
    if(a == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:16:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(a == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:17:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))
patrono = cervo
if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- EXECUTION TIME:
0.199375
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/1053/main.py", line 6, in <module>
    patrono = cervo
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:17:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))
patrono = cervo
if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    patrono = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:28:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

cervo = patrono

if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cervo = patrono
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:30:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

cervo = a

if(a == cervo):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:33:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

cervo = b

if(a == b):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cervo = b
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:34:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

b = cervo

if(a == b):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:34:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

b = "cervo"

if(a == b):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + "nao eh patrono do Harry Potter"
	
print(t)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:34:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = str(input("nome do patrono: "))

b = "cervo"

if(a == b):
	t = "cervo eh patrono do Harry Potter"
	
else:
	t = a + " nao eh patrono do Harry Potter"
	
print(t)
-- EXECUTION TIME:
0.18408
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
